--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
 </head>
 
-<body>
+<body style="height: 100vh">
   <app-root></app-root>
 </body>
 
